--- a/src/ZectranetBundle/Resources/views/project.html.twig
+++ b/src/ZectranetBundle/Resources/views/project.html.twig
@@ -51,7 +51,6 @@
 
         <div class="row">
             <div class="col-xs-12 col-md-12">
-                <div class="col-xs-12 col-md-12">
                 <blockquote>
                     <footer>
                         <cite title="Source Title">Project Description</cite>
@@ -60,60 +59,66 @@
                     <p>{{ project.description }}</p>
 
                 </blockquote>
-                </div>
+
             </div>
+
             <div class="col-md-6">
 
                 <!-- BEGIN OF OFFICE USERS PANEL -->
+                <div class="row">
                 <div class="col-md-12 col-xs-12">
-                    <div class="list-group">
-                        <div class="list-group-item" style="background:#ddedf4; color:#606060;">
+                    <div class="panel panel-default">
+                        <div class="panel-heading" style="background:#ddedf4; color:#606060;">
                             <i class="fa fa-users"></i>
                             <strong>Project Users</strong>
                         </div>
-                        <div class="list-group-item">
+                        <div class="panel-body" style="max-height: 250px; overflow-y: auto;">
                             <div class="row">
+
                                 {% for user in project.users %}
-                                    <div class="col-md-2 col-xs-4">
+
+                                    <div class="col-md-3 col-xs-4 col-sm-3">
                                         <div class="user-chat center-block">
                                             <a href="{{ path('zectranet_user_page', {'user_id': user.id}) }}" style="display: block; text-decoration: none;">
-                                                <p class="text-muted label label-default label-primary text-center center-block" style="margin-bottom: 1px;">Manager</p>
+                                                <p class="text-muted label label-default label-primary text-center center-block" style="margin:0 2px 0px 2px; border-radius: 0px;">Manager</p>
                                                 <img src="{{ asset('') ~ 'documents/' ~ user.avatar }}" class="img-responsive center-block" style="width: 60px; height: 60px;">
                                             </a>
                                             <a style="cursor: pointer;">
-                                                <p class="text-center" style="font-weight: bold;">{{ user.name ~ ' ' ~ user.surname ~ ' (' ~ user .username ~ ')'}}</p>
+                                                <p class="text-center" style="font-weight: bold;">{{ user.name ~ ' ' ~ user.surname }}</p>
                                             </a>
                                         </div>
                                     </div>
+
                                 {% endfor %}
 
                                 {% for office in project.offices %}
                                     {% for user in office.users %}
-                                        <div class="col-md-2 col-xs-4">
+                                        <div class="col-md-3 col-xs-4 col-sm-3">
                                             <div class="user-chat center-block">
                                                 <a href="{{ path('zectranet_user_page', {'user_id': user.id}) }}" style="display: block; text-decoration: none;">
-                                                    <p class="text-muted label label-default label-primary text-center center-block" style="margin-bottom: 1px;">Manager</p>
+                                                    <p class="text-muted label label-default label-primary text-center center-block" style="margin:0 2px 0px 2px; border-radius: 0px;">Manager</p>
                                                     <img src="{{ asset('') ~ 'documents/' ~ user.avatar }}" class="img-responsive center-block" style="width: 60px; height: 60px;">
                                                 </a>
                                                 <a style="cursor: pointer;">
-                                                    <p class="text-center" style="font-weight: bold;">{{ user.name ~ ' ' ~ user.surname ~ ' (' ~ user .username ~ ')'}}</p>
+                                                    <p class="text-center" style="font-weight: bold;">{{ user.name ~ ' ' ~ user.surname }}</p>
                                                 </a>
                                             </div>
                                         </div>
                                     {% endfor %}
                                 {% endfor %}
 
-                                <div class="col-md-2 col-xs-4">
+                                <div class="col-md-3 col-xs-4 col-sm-3">
                                     <div class="user-chat center-block">
                                         <a href="{{ path('zectranet_user_page', {'user_id': project.owner.id}) }}" style="display: block; text-decoration: none;">
-                                            <p class="text-muted label label-default label-primary text-center center-block" style="margin-bottom: 1px;">Owner</p>
+                                            <p class="text-muted label label-default label-primary text-center center-block" style="margin:0 2px 0px 2px; border-radius: 0px;">Owner</p>
                                             <img src="{{ asset('') ~ 'documents/' ~ project.owner.avatar }}" class="img-responsive center-block" style="width: 60px; height: 60px;">
                                         </a>
                                         <a style="cursor: pointer;">
-                                            <p class="text-center" style="font-weight: bold;">{{ project.owner.name ~ ' ' ~ project.owner.surname ~ ' (' ~ project.owner .username ~ ')'}}</p>
+                                            <p class="text-center" style="font-weight: bold; ">{{ project.owner.name ~ ' ' ~ project.owner.surname}}</p>
                                         </a>
                                     </div>
                                 </div>
+
                             </div>
                         </div>
                     </div>
@@ -121,8 +126,8 @@
                 <!-- END OF OFFICE USERS PANEL -->
 
                 <div class="col-xs-12 col-md-12">
-                    <div class="list-group">
-                        <div class="list-group-item" style="background:#ddedf4; color:#606060;">
+                    <div class="panel panel-default">
+                        <div class="panel-body" style="background:#ddedf4; color:#606060;">
                             <strong>Navigation</strong>
 
                             {% if app.user.id == project.owner.id %}
@@ -135,7 +140,7 @@
 
                         </div>
                         <div cg-busy="promiseProject">
-                            <div style="max-height: 220px; overflow-y: auto;">
+                            <div style="max-height: 220px; overflow-y: auto; min-height: 220px;">
 
                                 <a class="list-group-item" style="cursor: pointer;"
                                    ng-click="changeCurrentPage({{ project.id }}); removeHighlightFromEpicStories();">
@@ -158,8 +163,11 @@
                         </div>
                     </div>
                 </div>
-                </div>
+            </div>
+        </div>
+
             <div class="col-xs-12 col-md-6">
+                <div class="row">
                 <div class="col-xs-12 col-md-12">
                     <div ng-controller="DocumentsController">
                         <!-- BEGIN OF CHAT PANEL -->
@@ -168,7 +176,7 @@
                                 <i class="fa fa-comments fa-fw"></i>
                                 <strong> Project Chat</strong>
                             </div>
-                            <div id="posts-panel" class="list-group-item panel-body" cg-busy="promise" style="max-height: 350px;">
+                            <div id="posts-panel" class="list-group-item panel-body" cg-busy="promise" style="max-height: 460px; height: 460px;">
                                 <div ng-if="(posts == null) || (posts.length == 0)" class="center-block vertical-center">
                                     <h3 class="text-info text-center">Post will be displayed here</h3>
                                 </div>
@@ -201,7 +209,9 @@
                         {% include '@Zectranet/dialogAdd.html.twig' %}
                     </div>
                 </div>
+                </div>
             </div>
+
         </div>
 
             <!-- BEGIN OF EPIC STORY ADD MODAL -->
@@ -212,7 +222,6 @@
         <!-- Begin of Tasks -->
         <div class="row" ng-controller="TaskController">
             <div class="col-md-12">
-            <div class="col-md-12">
                 <div class="panel panel-default list-group">
                     <div class="list-group-item" style="background:#ddedf4; color:#606060;">
                         <i class="fa fa-tasks"></i>
@@ -221,31 +230,38 @@
 
                     <div cg-busy="promise" class="panel-body">
                         <!-- Begin of Task Nav Tabs -->
-                        <ul id="task-view-tabs" class="nav nav-tabs" role="tablist">
-                            <li data-toggle="tooltip" data-placement="top" title="Table view" role="presentation" class="active">
-                                <a data-toggle="tab" id="task-view-table" class="btn" href="#table-view" aria-controls="table-view" role="tab" aria-expanded="true">
-                                    <i class="fa fa-table fa-2x"></i>
-                                </a>
-                            </li>
-                            {#
-                            <li data-toggle="tooltip" data-placement="top" title="List view" role="presentation">
-                                <a data-toggle="tab" id="task-view-list" class="btn" href="#list-view" aria-controls="list-view" role="tab" aria-expanded="false">
-                                    <i class="fa fa-list fa-2x"></i>
-                                </a>
-                            </li>
-                            #}
-                            <li data-toggle="tooltip" data-placement="top" title="Agile view" role="presentation">
-                                <a data-toggle="tab" id="task-view-agile"  class="btn" href="#agile-view" aria-controls="agile-view" role="tab" aria-expanded="false">
-                                    <i class="fa fa-th fa-2x"></i>
-                                </a>
-                            </li>
-                            <li data-toggle="tooltip" data-placement="top" title="Add new task" role="presentation">
-                                <a id="add_new_task_btn" style="cursor: pointer" data-toggle="modal" data-target="#add_new_task">
-                                    <i class="fa fa-plus fa-2x"></i>
-                                </a>
-                            </li>
-                            <li style="float: right !important;">{% include '@Zectranet/filter.html.twig' %}</li>
-                        </ul>
+                        <div class="row">
+                            <div class="col-md-3 col-sm-12" style="width: 22%;">
+                                <ul id="task-view-tabs" class="nav nav-tabs" role="tablist">
+                                    <li data-toggle="tooltip" data-placement="top" title="Table view" role="presentation" class="active">
+                                        <a data-toggle="tab" id="task-view-table" class="btn" href="#table-view" aria-controls="table-view" role="tab" aria-expanded="true">
+                                            <i class="fa fa-table fa-2x"></i>
+                                        </a>
+                                    </li>
+                                    {#
+                                    <li data-toggle="tooltip" data-placement="top" title="List view" role="presentation">
+                                        <a data-toggle="tab" id="task-view-list" class="btn" href="#list-view" aria-controls="list-view" role="tab" aria-expanded="false">
+                                            <i class="fa fa-list fa-2x"></i>
+                                        </a>
+                                    </li>
+                                    #}
+                                    <li data-toggle="tooltip" data-placement="top" title="Agile view" role="presentation">
+                                        <a data-toggle="tab" id="task-view-agile"  class="btn" href="#agile-view" aria-controls="agile-view" role="tab" aria-expanded="false">
+                                            <i class="fa fa-th fa-2x"></i>
+                                        </a>
+                                    </li>
+                                    <li data-toggle="tooltip" data-placement="top" title="Add new task" role="presentation">
+                                        <a id="add_new_task_btn" style="cursor: pointer" data-toggle="modal" data-target="#add_new_task">
+                                            <i class="fa fa-plus fa-2x"></i>
+                                        </a>
+                                    </li>
+                                </ul>
+                            </div>
+                            <div class="col-md-9 col-sm-12" style="width: 77%;"><div class="pull-right">{% include '@Zectranet/filter.html.twig' %}</div> </div>
+                        </div>
+
+
+
                         <!-- End of Task Nav Tabs -->
 
                         <div id="tasks-tab-content" class="tab-content">
@@ -271,7 +287,6 @@
                             <!-- End of Task Agile View -->
                         </div>
                     </div>
-                </div>
                 </div>
             </div>
 
