--- a/src/ZectranetBundle/Resources/views/project.html.twig
+++ b/src/ZectranetBundle/Resources/views/project.html.twig
@@ -36,7 +36,7 @@
                                 </a>
                             </div>
                             <div class="pull-right" data-toggle="tooltip" data-placement="top" title="Project Versions">
-                                <a style="cursor: pointer; text-decoration: none;" data-toggle="modal" data-target="#project_versions" ng-click="getProjectVersions();">
+                                <a style="cursor: pointer; text-decoration: none;" href="{{ path('zectranet_show_project_versions', {'project_id': project.id }) }}">
                                     <i class="fa text-warning fa-fw fa-code fa-2x"></i>
                                 </a>
                             </div>
